2008-03-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/convert-to-tarballs.py:
	* smoketesting/tarball-conversion-stable.config:
	Add a file:// mirror for download.gnome.org so that we can run the
	script on window and have super-fast result! That's very very
	convenient with --versions-only

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: update for 2.23.x

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: update sabayon for 2.22.0

2008-03-11  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: updated for 2.22.0. Committing it now so it doesn't
	get lost somewhere... There might still be one or two updates.

2008-03-11  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Add --versions-only command
	line option. Mostly hacked together by Vincent Untz. Needs some
	restructuring to make it less hacky. Basically: first get the latest
	versions, then do another pass for md5+size.

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config: update for 2.22.0.
	Hopefully, it's right :-)
	* smoketesting/tarball-conversion.config: reorder stuff a bit

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add limit for gucharmap,
	metacity and orca, revert the java-gnome change for now since we
	don't know if 4.0.x is stable
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: 2.21.92 release

2008-02-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Limit GDM to 2.20. Use
	java-gnome for Java bindings (4.0 version).
	* smoketesting/tarball-conversion.config: Add option to set the config
	file. Limit tarballs to files with a valid name (not the 'rc1' stuff
	used in java-gnome).

2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>

	* versions: Fix incorrect version for perl-Gnome2 module.

2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>
